2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* Doxyfile: Update to a more recent version.

	* skstream/skserver.h, skstream/sksocket.h: Add some quick
	  doc strings to classes, so the inheritance tree is apparant to
	  doxygen.

2007-09-02  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Remove the debian subdir from distribution.

2007-05-28  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp: A much safer way of ensuring the address
	  length is correct, using sizeof.

2007-05-28  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp: It is not safe to assume the maximum
	  path length of a unix socket is 108. On OSX it is 104. On some
	  systems it is defined, on others we have to assume 104.

2007-04-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Clean up the way debian/rules permissions are set so
	  they cause less breakage.

2007-04-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Add a more detailed test so the inlined version
	  of gai_strerror provided by more recent versions of mingw can
	  be used.

2006-12-17  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp, skstream/skstream.h, skstream/skstream_unix.h:
	  Add some inline documentation comments for Doxygen. Switch some
	  iostream related types to use the typedefs made available by
	  the iostream library.

2006-12-14  Al Riddoch  <alriddoch@zepler.org>

	* Makefile.am: Remove pc.in files from EXTRA_DIST, as autotools
	  distribute them anyway. Include Doxyfile in the distribution.

	* Doxyfile: Remove missing footer directive.

2006-12-09  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Ensure debian/rules is executable.

	* debian/control.in: Fix the name of the debug package.

	* debian/libskstream-0.3-dev.install: Fix the header order.

	* libskstream-0.3-4-dbg.install, libskstream-0.3-4.install:
	  Rename install files to the correct interface version.

2006-12-09  Al Riddoch  <alriddoch@zepler.org>
